--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,16 +10,11 @@
   },
   "dependencies": {
     "@astrojs/react": "^4.2.7",
-    "@astrojs/tailwind": "^6.0.2",
     "@tailwindcss/vite": "^4.1.5",
     "astro": "^5.7.10",
     "leaflet": "^1.9.4",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
-  },
-  "devDependencies": {
-    "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.24",
+    "react-dom": "^19.1.0",
     "tailwindcss": "^4.1.5"
   }
 }
