--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -2,12 +2,16 @@ FROM node:20-alpine
 
 WORKDIR /app
 
-# Copia solo package.json y lock primero para cachear dependencias
+# Copiar las dependencias
 COPY package*.json ./
-
 RUN npm install
 
-# El código lo montamos con el volumen, no lo copiamos aquí
+# Copiar el resto del proyecto
+COPY . .
+
+# Render espera que la app escuche en PORT (puerto 3000 por defecto)
+ENV PORT=3000
 EXPOSE 3000
-CMD ["astro", "dev", "--host", "0.0.0.0", "--port", "3000"]
-# Exponemos el puerto 3000 para el frontend
+
+# Usamos Astro desde npx y le especificamos el puerto y host
+CMD ["npx", "astro", "dev", "--host", "0.0.0.0", "--port", "3000"]
