--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,36 +8,28 @@ services:
       context: ./backend
       dockerfile: Dockerfile
     volumes:
-      - ./backend/app:/code/app  # Mapea solo el directorio app
+      - ./backend/app:/code/app
     env_file:
       - ./backend/.env
     command: ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "80", "--reload"]
+    ports:
+      - "8000:80"  # Solo si quieres acceso externo
     networks:
       - app_network
 
   astro:
     build:
       context: ./frontend
-      dockerfile: Dockerfile  # Asegúrate de tener este archivo en frontend/
+      dockerfile: Dockerfile
     volumes:
       - ./frontend:/app
       - /app/node_modules
-    command: sh -c "npm install && npm run dev -- --host 0.0.0.0 --port 4321"
+    command: sh -c "npm install --legacy-peer-deps && npm run dev -- --host 0.0.0.0 --port 4321"
+    ports:
+      - "4321:4321"
     environment:
       - HOST=0.0.0.0
       - PORT=4321
       - CHOKIDAR_USEPOLLING=true
-    networks:
-      - app_network
-
-  nginx:
-    image: nginx:alpine
-    ports:
-      - "80:80"
-    volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf
-    depends_on:
-      - fastapi-app
-      - astro
     networks:
       - app_network
