--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@astrojs/react": "^4.2.7",
+    "@supabase/supabase-js": "^2.49.7",
     "@tailwindcss/vite": "^4.1.5",
     "astro": "^5.7.10",
     "leaflet": "^1.9.4",
