--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@tailwindcss/vite": "^4.1.5",
     "astro": "^5.7.10",
     "leaflet": "^1.9.4",
+    "lucide-astro": "^0.511.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "tailwindcss": "^4.1.5"
